# get-zen

./: .gitignore  Cargo.toml  LICENSE  README.md  build-appimage.sh  get_zen.sh
.github/workflows/: release.yml
AppDir/: .DirIcon  AppRun  get-zen.desktop
locales/: en.yml  es.yml
src/: main.rs
